syntax = "proto3";

package webAdminPanel;

service Handshake {
  rpc DoHandshake (HandshakeRequest) returns (HandshakeReply);
}

service Dashboard {
  rpc GetDashboardElements (GetDashboardElementsRequest) returns (GetDashboardElementsReply);
}

message GetDashboardElementsRequest {
  int32 id = 1;
}

message DashboardElement {
  int32 id = 1;
  int32 type = 2;
  string name = 3;
  string description = 4;
  string data = 5;
}

message GetDashboardElementsReply {
  repeated DashboardElement elements = 1;
}

message HandshakeRequest {
  string message = 1;
}

message HandshakeReply {
  string message = 1;
}

service Settings {
  rpc GetServerName (GetServerNameRequest) returns (GetServerNameReply);
}

message GetServerNameRequest {
  bool _unused = 1;
}

message GetServerNameReply {
  string serverName = 1;
}

